--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.0",
     "@types/react": "^16.9.53",
